--- a/src/App.css
+++ b/src/App.css
@@ -346,7 +346,7 @@ body {
 
 @layer utilities {
   .btn_white {
-    @apply border-white bg-white px-8 py-3 text-green-50;
+    /* @apply border-white bg-white px-8 py-3 text-green-50; */
   }
   .btn_white_text {
     @apply border-white bg-white px-8 py-3 text-gray-90;
