--- a/src/stylesheet/dashboard/Calc.css
+++ b/src/stylesheet/dashboard/Calc.css
@@ -6,6 +6,12 @@
   background-image: url("../../../public/home/calculator.png");
 }
 
+@media only screen and (max-width: 600px) {
+  #dash-calc {
+    height: 130vh;
+  }
+}
+
 #dash-calc .sh-r .MuiFormControl-root {
   width: 25% !important;
 }
