--- a/src/stylesheet/Sidebar.css
+++ b/src/stylesheet/Sidebar.css
@@ -1,150 +1,143 @@
 #side_nav {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    flex-shrink: 0;
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+  overflow-y: auto; /* Added property to handle content overflow */
 }
 
 #side_header {
-    display: flex;
-    /* align-items: center; */
-    justify-content: space-between;
-    align-items: center !important;
-    padding: 12.5px 20px;
-    border-bottom: 1px solid #ffffff42;
-
+  display: flex;
+  /* align-items: center; */
+  justify-content: space-between;
+  align-items: center !important;
+  padding: 12.5px 20px;
+  border-bottom: 1px solid #ffffff42;
 }
-#blue{
-    color: white;
+#blue {
+  color: white;
 }
-#side_header .logo {}
 #side_header .logo {
-    font-size: 1.55rem;
-    font-weight: 600;
-    display: flex;
-    gap: 5px;
-    align-items: center;
+}
+#side_header .logo {
+  font-size: 1.55rem;
+  font-weight: 600;
+  display: flex;
+  gap: 5px;
+  align-items: center;
 }
 
 #side_header button {
-    border: none;
-    background: none;
+  border: none;
+  background: none;
 }
 
 .gray {
-    color: var(--gray) !important;
-    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.1);
+  color: var(--gray) !important;
+  transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.1);
 }
 
 .logo span {
-    margin-left: 3px;
+  margin-left: 3px;
 }
 
 .gray:hover {
-    color: #eee;
+  color: #eee;
 }
 
 .logo:hover .gray {
-    color: var(--org) !important;
+  color: var(--org) !important;
 }
 
 #side_header .gray {
-    color: #ffffff !important;
+  color: #ffffff !important;
 }
-#side_header .toggle>* {
-    font-size: 2rem;
-    margin-top: 4px;
+#side_header .toggle > * {
+  font-size: 2rem;
+  margin-top: 4px;
 }
 
 #na_links {
-    width: 100%;
-    height: auto;
-    /* background-color: lime; */
-    display: flex;
-    flex-direction: column;
+  width: 100%;
+  height: auto;
+  /* background-color: lime; */
+  display: flex;
+  flex-direction: column;
 }
 
 #nav_links #link {
-    display: flex;
-    padding: 7px 0;
-    flex-direction: column;
+  display: flex;
+  padding: 7px 0;
+  flex-direction: column;
 
-    /* background-color: crimson; */
+  /* background-color: crimson; */
 }
 
-#nav_links #link a span{
-    display: flex;
-    align-items: center;
+#nav_links #link a span {
+  display: flex;
+  align-items: center;
 }
-#nav_links #link a span>* {
-    color: var(--org);
-    /* margin-top: 5px; */
-    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.1);
+#nav_links #link a span > * {
+  color: var(--org);
+  /* margin-top: 5px; */
+  transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.1);
 }
-
-
 
 #nav_links #link a:hover {
-    /* background-color: #1F1F2F; */
-    background-color: var(--blue);
+  /* background-color: #1F1F2F; */
+  background-color: var(--blue);
 }
 
-#nav_links #link a:hover span>* {
-    color: #fff;
+#nav_links #link a:hover span > * {
+  color: #fff;
 }
 
 #nav_links #link a::after {
-    content: '';
-    height: 0%;
-    width: 3.5px;
-    background-color: rgb(255, 255, 255);
-    display: inline-block;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.1) ;
-
+  content: "";
+  height: 0%;
+  width: 3.5px;
+  background-color: rgb(255, 255, 255);
+  display: inline-block;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.1);
 }
-
 
 #nav_links #link a:hover::after {
-    content: '';
-    height: 100%;
-
-
+  content: "";
+  height: 100%;
 }
 
-[data-collapse="true"] #nav_links #link a
-,
-[data-collapse="true"] #side_header
- {
-    justify-content: center;
+[data-collapse="true"] #nav_links #link a,
+[data-collapse="true"] #side_header {
+  justify-content: center;
 }
 #nav_links #link a {
-    display: flex;
-    align-items: center;
-    font-size: 0.7rem;
-    gap: 10px;
-    text-decoration: none;
-    color: #fff;
-    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.1);
-    padding: 10px 20px;
-    text-transform: capitalize;
-    position: relative;
-
+  display: flex;
+  align-items: center;
+  font-size: 0.7rem;
+  gap: 10px;
+  text-decoration: none;
+  color: #fff;
+  transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.1);
+  padding: 10px 20px;
+  text-transform: capitalize;
+  position: relative;
 }
 
 #side_nav small {
-    text-transform: uppercase;
-    font-size: 0.75rem;
-    letter-spacing: 2px;
-    padding: 0px 20px;
-    margin: 10px;
+  text-transform: uppercase;
+  font-size: 0.75rem;
+  letter-spacing: 2px;
+  padding: 0px 20px;
+  margin: 10px;
 }
 
 #link a b {
-    font-size: 0.93rem;
+  font-size: 0.93rem;
 }
 
-@media (max-width:875px) {}
+@media (max-width: 875px) {
+}
